src/assets/styles/cmps/board/structure/GroupContainer.scss
@use "../../../setup/variables" as *;

.group-container {
  position: relative;
}

.group-container:not(:first-child) {
  margin-top: -76px;
}

.ghost-div {
  width: 100%;
  visibility: hidden;
  height: 76px;
}

.task-left-indicator {
  width: 5px;
}

.task-border-bottom {
  border-bottom: 1px solid $layout-border-color;
}

.cell-left-padding {
  padding-left: 8px;
}

.task-menu-button {
  width: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
}

.add-task-cell {
  flex-grow: 1;
  justify-content: flex-start !important;
}

.task-menu-button > *:first-child {
  opacity: 0;
}

.task-menu-button:hover > *:first-child {
  opacity: 1;
}

.bottom-border {
  border-bottom: 1px solid $layout-border-color;
}

.top-bottom-border {
  border-bottom: 1px solid $layout-border-color;
  border-top: 1px solid $layout-border-color;
}

.table-row-layout {
  display: flex;
  height: 36px;

  .task-left-checkbox {
    border-left: none;
    padding-left: 8px;
    background-color: white;
  }

  & > * {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    border-left: 1px solid $layout-border-color;
    border-top: 1px solid $layout-border-color;
    flex-shrink: 0;
  }

  & > *:not(:last-child) {
    border-right: none;
  }

  & > *:last-child .column-filler {
    border-right: 1px solid $layout-border-color;
    background-color: red;
  }

  .column-filler {
    width: 100%;
  }
}

.full {
  width: 100%;
}

